--- a/database/config.json
+++ b/database/config.json
@@ -2,21 +2,21 @@
   "development": {
     "username": "postgres",
     "password": "chen..02",
-    "database": "ticket_merchant_test",
+    "database": "ticket_merchant",
     "host": "127.0.0.1",
     "dialect": "postgresql"
   },
   "test": {
     "username": "postgres",
     "password": "chen..02",
-    "database": "ticket_merchant_bak",
+    "database": "ticket_merchant",
     "host": "127.0.0.1",
     "dialect": "postgresql"
   },
   "production": {
     "username": "postgres",
     "password": "chen..02",
-    "database": "ticket_merchant_pro",
+    "database": "ticket_merchant",
     "host": "127.0.0.1",
     "dialect": "postgresql"
   }
