--- a/.github/workflows/release-docker-image.yml
+++ b/.github/workflows/release-docker-image.yml
@@ -6,9 +6,10 @@
 name: Publish Docker image
 
 on:
-  release:
-    types: [published]
-
+    push:
+      branches:
+        - backend
+    workflow_dispatch:
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
