--- a/database/config.json
+++ b/database/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
     "username": "postgres",
-    "password": "chen..02",
+    "password": "password",
     "database": "ticket_merchant",
     "host": "127.0.0.1",
     "dialect": "postgresql"
   },
   "test": {
     "username": "postgres",
-    "password": "chen..02",
+    "password": "password",
     "database": "ticket_merchant",
     "host": "127.0.0.1",
     "dialect": "postgresql"
   },
   "production": {
     "username": "postgres",
-    "password": "chen..02",
+    "password": "password",
     "database": "ticket_merchant",
     "host": "127.0.0.1",
     "dialect": "postgresql"
