--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 GOOGLE_APPLICATION_CREDENTIALS="./serviceAccountKey.json"
+POSTGRES_PASSWORD=123456
+POSTGRES_USER=coyote
+POSTGRES_DB=ticket_merchant
