--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,11 @@ services:
       # so this ensures our database is loaded first
       - postgres
     ports:
-      - "8080:8080"
+      - "7001:7001"
     volumes:
       # Maps our current project directory `.` to
       # our working directory in the container
-      - ./:/usr/src/app/
-      # node_modules workaround for volumes
-      # https://stackoverflow.com/a/32785014
-      - /usr/src/app/node_modules
+      - /root/serviceAcountKey.json:/usr/src/app/
 
   # This is the configuration for our PostgreSQL database container
   # Note the `postgres` name is important, in out Node app when we refer
@@ -41,4 +38,3 @@ services:
       # When the PostgreSQL container is started it will run any scripts
       # provided in the `docker-entrypoint-initdb.d` directory, this connects
       # our seed file to that directory so that it gets run
-      - ./database-seed.sql:/docker-entrypoint-initdb.d/database-seed.sql
