--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,16 @@ services:
     ports:
       - "7001:7001"
 
+
   postgres:
     image: postgres:14.2-alpine
+    restart: always
     environment:
       POSTGRES_USER: coyote
       POSTGRES_PASSWORD: 123456
       POSTGRES_DATABASE: ticket_merchant
     ports:
       - "5432:5432"
+    volumes: 
+      - ./ticket_merchant.sql:/docker-entrypoint-initdb.d/ticket_merchant.sql
+
