--- a/database/config.json
+++ b/database/config.json
@@ -1,23 +1,26 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "password",
+    "username": "coyote",
+    "password": "123456",
     "database": "ticket_merchant",
     "host": "127.0.0.1",
+    "port": "15432",
     "dialect": "postgresql"
   },
   "test": {
-    "username": "postgres",
-    "password": "password",
+    "username": "coyote",
+    "password": "123456",
     "database": "ticket_merchant",
     "host": "127.0.0.1",
+    "port": "15432",
     "dialect": "postgresql"
   },
   "production": {
-    "username": "postgres",
-    "password": "password",
+    "username": "coyote",
+    "password": "123456",
     "database": "ticket_merchant",
     "host": "127.0.0.1",
+    "port": "15432",
     "dialect": "postgresql"
   }
 }
