--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "firebase": "^9.6.10",
     "firebase-admin": "^10.0.2",
     "pg": "^8.7.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "egg-sequelize": "^6.0.0",
+    "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
     "autod": "^3.0.1",
