--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,8 @@ services:
       POSTGRES_PASSWORD: 123456
       POSTGRES_DATABASE: ticket_merchant
     ports:
-      - "15432:5432"
+      - "5432:5432"
     volumes: 
       - ./ticket_merchant.sql:/docker-entrypoint-initdb.d/ticket_merchant.sql
+      - ./init.sh:/docker-entrypoint-initdb.d/init.sh
 
