--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     environment:
       POSTGRES_USER: coyote
       POSTGRES_PASSWORD: 123456
-      POSTGRES_DATABASE: ticket_merchant
+      POSTGRES_DB: ticket_merchant
     ports:
       - "5432:5432"
     volumes: 
