--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "7001:7001"
     volumes:
-      - /root/serviceAccountKey.json /workdir/serviceAccountKey.json
+      - /root/serviceAccountKey.json:/workdir/serviceAccountKey.json
 
 
   postgres:
