--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-ticket_merchant_backend",
+    "start": "egg-scripts start --title=egg-server-ticket_merchant_backend",
     "stop": "egg-scripts stop --title=egg-server-ticket_merchant_backend",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
